feat: litellm support tx yuanbao

--- a/.env
+++ b/.env
@@ -15,7 +15,8 @@ SUPERUSERS=["379450326"]
 AI_CHATS='[
   {"api_key":"API_KEY","base_url":"https://api.chatanywhere.tech","model":"openai/gpt-4o-mini"},
   {"api_key": "", "model": "deepseek/deepseek-chat"},
-  {"api_key": "", "model": "gemini/gemini-2.0-flash-exp"}
+  {"api_key": "", "model": "gemini/gemini-2.0-flash-exp"},
+  {"api_key": "hy_user hy_token agent_id", "model": "腾讯元宝/deepseek-r1-search"},
 ]'
 
 # 代理设置
