feat: add BiliCard AI model configuration and update related functions

--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ AI_CHATS='[
   {"api_key": "", "model": "gemini/gemini-2.0-flash-exp"},
   {"api_key": "hy_user hy_token agent_id", "model": "腾讯元宝/deepseek-r1-search"},
 ]'
-
+BILI_CARD_AI_MODEL="openai/gpt-4o-mini"
 # 代理设置
 #HTTP_PROXY="http://localhost:7890"
 
