--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "qqrobot-plugin"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12.10"
+requires-python = ">=3.11.0"
 dependencies = [
     "absl-py==2.3.0",
     "aiocqhttp==1.4.4",
@@ -106,6 +106,7 @@ dependencies = [
     "pyee==12.0.0",
     "pygments==2.19.2",
     "pygtrie==2.5.0",
+    "pyinstaller>=6.16.0",
     "pyjwt==2.10.1",
     "python-dateutil==2.9.0.post0",
     "python-dotenv==1.1.0",
